--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,6 @@ services:
         - archwaynetwork
       environment:
         SERVING_ADDR: ${SERVING_ADDR:-:8080} 
-        # RPC_ADDRESS: ${RPC_ADDRESS:-wss://rpc.cosmos.network:443}
         POSTGRES_DB: ${POSTGRES_DB:-cosmologger}
         POSTGRES_USER: ${POSTGRES_USER:-root}
         POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
@@ -59,7 +58,7 @@ services:
       - archwaynetwork
     environment:
       RPC_ADDRESS: ${RPC_ADDRESS:-tcp://192.168.188.26:26657}
-      GRPC_ADDRESS: ${RPC_ADDRESS:-grpc.augusta-1.archway.tech:443}
+      GRPC_ADDRESS: ${GRPC_ADDRESS:-grpc.augusta-1.archway.tech:443}
       GRPC_TLS: ${GRPC_TLS:-true}
       POSTGRES_DB: ${POSTGRES_DB:-cosmologger}
       POSTGRES_USER: ${POSTGRES_USER:-root}
