--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "valuter"]
 	path = valuter
 	url = git@github.com:archway-network/valuter.git
+[submodule "valuter-ui"]
+	path = valuter-ui
+	url = git@github.com:archway-network/valuter-ui.git
