change to prod mode

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,7 +71,7 @@ services:
     container_name: cosmologger
     build:
       context: ./cosmologger
-      target: development  # development | test | production (default) # docker-compose up --build
+      # target: development  # development | test | production (default) # docker-compose up --build
     depends_on: 
       - postgres
     ports: 
